# Crossfarmer

./: README.md  paths documentation.docx
crossfarmer_client/: package-lock.json
crossfarmer_client_typescript/crossfarmer_client_typescript/: package-lock.json  (+1 more)
crossfarmer_server/: Cargo.toml  database.db
crossfarmer_server/assets/: creatures.json  creatures_types.csv  database.db
crossfarmer_server/src/: main.rs
crossfarmer_server/src/api/: mod.rs
crossfarmer_server/src/api/entrance/: mod.rs
crossfarmer_server/src/api/gameplay/: mod.rs
crossfarmer_server/src/api/gameplay/accounts/: mod.rs
crossfarmer_server/src/api/gameplay/creatures/: messages.rs  mod.rs
crossfarmer_server/src/api/messages/: messages.rs  mod.rs
crossfarmer_server/src/database/: accounts.rs  creatures.rs  guilds.rs  messages.rs  mod.rs  sessions.rs
crossfarmer_server/src/mail/: credentials.rs  mod.rs
crossfarmer_server/src/world/: mod.rs
postgres/: .gitignore  README.md
server/server/: Cargo.toml  database.db
server/server/src/: main.rs
server/server/src/accounts/: account.rs  mod.rs
server/server/src/application/: mod.rs
server/server/src/application/database/: accounts.rs  guilds.rs  mod.rs  sessions.rs
server/server/src/application/entrance/: messages.rs  mod.rs
server/server/src/application/gameplay/: creature.rs  mod.rs
server/server/src/database/: accounts.rs  mod.rs  sessions.rs
server/server/src/entrance/: mod.rs
server/server/src/game/: auction.rs  mod.rs
server/server/src/game/farms/: mod.rs
server/server/src/game/farms/farm/: Plant.rs  mod.rs
(+46 files in other folders)
