[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.2"
jsonwebtoken = "9.2.0"
log = "0.4.20"
tokio-postgres = "0.7.10"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
